--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,22 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
-  }
-  
+  "builds": [
+    {
+      "src": "dist/cashew-bees",
+      "use": "@vercel/static"
+    }
+  ],
+  "rewrites": [
+    { 
+      "source": "/(.*)", 
+      "destination": "/index.html" 
+    },
+    { 
+      "source": "/feedback/((?!general).*)", 
+      "destination": "/api/feedback/general" 
+    },
+    { 
+      "source": "/feedback/:id", 
+      "destination": "/api/feedback/:id" 
+    }
+  ]
+}
