--- a/angular.json
+++ b/angular.json
@@ -13,21 +13,19 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/cashew-bees",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
-            "tsConfig": "tsconfig.app.json",
-            "assets": ["src/assets"],
-            "styles": [
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/primeflex/primeflex.css",
-              "src/styles.css"
-            ],
-            "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
-            "server": "src/main.server.ts",
-            "prerender": true,
-          },
+              "outputPath": "dist/cashew-bees",
+              "index": "src/index.html",
+              "main": "src/main.ts",
+              "polyfills": ["zone.js"],
+              "tsConfig": "tsconfig.app.json",
+              "assets": ["src/assets"],
+              "styles": [
+                "node_modules/primeicons/primeicons.css",
+                "node_modules/primeflex/primeflex.css",
+                "src/styles.css"
+              ],
+              "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+            }
           "configurations": {
             "production": {
               "budgets": [
